--- a/app/views/post_images/show.html.erb
+++ b/app/views/post_images/show.html.erb
@@ -12,7 +12,7 @@
 <div class ="comments">
 
   <p>コメント数:<%= @post_image.post_comments.count %></p>
-  <% @post_image.post_commentes.each do |post_comment| %>
+  <% @post_image.post_comments.each do |post_comment| %>
     <p><%= image_tag('sample-author1.jpg') %></p>
     <%= @post_comment.user.name %>
     <%= @post_comment.created_at.strftime('%Y/%m/%d') %><%= @post_comment.comment %>
@@ -20,9 +20,8 @@
 </div>
 
 <div class ="new-comment">
-  <%= form_with (model:[@post_image,@post_comment], local:true do |f| %>
-    <%= f.text_area :comment, rows:'5',placeholder:"コメントをここに" %>
+  <%= form_with(model:[@post_image,@post_comment], local:true) do |f| %>
+    <%= f.text_area :comment, rows:'5', placeholder: "コメントをここに" %>
     <%= f.submit '送信する' %>
   <% end %>
-
 </div>
