--- a/app/views/post_images/new.html.erb
+++ b/app/views/post_images/new.html.erb
@@ -1,10 +1,17 @@
 <h1>画像投稿フォーム</h1>
+<% if @post_image.errors.any? %>
+  <%= @post_image.errors.count %>件のエラーが発生しました
+  <% @post_image.errors.full_messages.each do |message| %>
+    <%= message %>
+  <% end %>
+<% end %>
+
 <%= form_with model:@post_image, local:true do |f| %>
- <h4>画像</h4>
- <%= f.attachment_field :image %>
- <h4>ショップ名</h4>
- <%= f.text_field :shop_name %>
- <h4>説明</h4>
- <%= f.text_area :cption %>
- <%= f.submit '投稿' %>
- <% end %>
+  <h4>画像</h4>
+  <%= f.attachment_field :image %>
+  <h4>ショップ名</h4>
+  <%= f.text_field :shop_name %>
+  <h4>説明</h4>
+  <%= f.text_area :cption %>
+  <%= f.submit '投稿' %>
+<% end %>
